--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "perform action like save or load to browser's localStorage with Promise type",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-dist": "`npm bin`/babel src -d dist"
   },
   "repository": {
     "type": "git",
@@ -23,8 +23,12 @@
   },
   "homepage": "https://github.com/kyawkyawsoezhu/perform-local-storage#readme",
   "dependencies": {
-    "lodash": "^4.17.4",
     "jsonwebtoken": "^8.0.1",
+    "lodash": "^4.17.4",
     "moment": "^2.18.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.0"
   }
 }
